Fixing CSS on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -36,7 +36,7 @@ header {
 	}
 
 	@media (max-width: 640px) {
-		padding: 60px;
+		padding: 60px 10px;
 	}
 }
 
@@ -73,15 +73,20 @@ header {
 
 		h2 { 
 			margin-bottom: 1.5rem;
-			
+
 			@media (max-width: 640px) {
 				font-size: 2rem;
+				margin-bottom: 0;
 			}
 		}
 		h3 {
 			font-size: 1.8rem;
 			color: #2199E8;
 			font-weight: 300;
+
+			@media (max-width: 640px) {
+				margin-top: 30px;
+			}
 		}
 
 		h4 {
